Fixed page layout on small devices, and removed unnecessary tags and code.

--- a/src/blocks-sdk/components/Lightpad.css
+++ b/src/blocks-sdk/components/Lightpad.css
@@ -1,5 +1,7 @@
 .lightpad {
   position: relative;
+  width: 400;
+  display: inline-block;
 }
 
 .lightpad .touch {
